# OpenGL-Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plan.txt
assets/shaders/: debug_buffer.frag  deferred_light.frag  scene.frag  scene.vert
include/: app_input.h  g_buffer_resources.h  imgui_layer.h  scene_gpu_resources.h  scene_gpu_resources_runtime.h
src/: app_input.cpp  g_buffer_resources.cpp  imgui_layer.cpp  main.cpp  scene_gpu_resources.cpp  scene_gpu_resources_runtime.cpp
